fix: adjust position of trait bubble for better alignment

--- a/app/Home/About/about.css
+++ b/app/Home/About/about.css
@@ -64,7 +64,7 @@
 
 .trait {
   @apply bg-gradient-to-br from-rose-300 to-pink-300;
-  top: 70%;
+  top: 75%;
   left: 50%;
   border-color: transparent;
 }
